<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/login_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".screens.register.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ĐĂNG KÝ TÀI KHOẢN"
                android:textAlignment="center"
                android:textColor="#16716D"
                android:textSize="30sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"></TextView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_regfname"
                        style="@style/parent">

                        <EditText
                            android:id="@+id/editfisrtname"
                            style="@style/modifiedEditText"
                            android:drawableLeft="@drawable/ic_baseline_fullname"
                            android:drawablePadding="10dp"
                            android:hint="Tên"
                            android:inputType="textPersonName"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_reglname"
                        style="@style/parent">
                        <EditText
                            android:id="@+id/editlastname"
                            style="@style/modifiedEditText"
                            android:drawableLeft="@drawable/ic_baseline_fullname"
                            android:drawablePadding="10dp"
                            android:hint="Họ"
                            android:inputType="textPersonName"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_reggender"
                        style="@style/parent">

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:layout_marginRight="20dp"
                                android:drawableLeft="@drawable/ic_baseline_fullname"
                                android:drawablePadding="10dp"
                                android:hint="Giới tính"
                                android:textSize="14dp" />

                            <RadioButton
                                    android:id="@+id/rbnam"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginRight="20dp"
                                    android:text="Nam" />

                                <RadioButton
                                    android:id="@+id/rbnu"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Nữ" />

                        </RadioGroup>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_regbirthday"
                        style="@style/parent">
                        <EditText
                            android:id="@+id/editabirthday"
                            style="@style/modifiedEditText"
                            android:drawableLeft="@drawable/ic_baseline_calendar"
                            android:drawablePadding="10dp"
                            android:hint="Ngày sinh"
                            android:inputType="date" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_regaddress"
                        style="@style/parent">

                        <EditText
                            android:id="@+id/editaddress"
                            style="@style/modifiedEditText"
                            android:drawableLeft="@drawable/ic_baseline_location_on_24"
                            android:drawablePadding="10dp"
                            android:hint="Địa chỉ"
                            android:inputType="text"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_regphone"
                        style="@style/parent">

                        <EditText
                            android:id="@+id/editphone"
                            style="@style/modifiedEditText"
                            android:drawableLeft="@drawable/ic_baseline_phone"
                            android:drawablePadding="10dp"
                            android:hint="Số điện thoại"
                            android:inputType="phone"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_regemail"
                        style="@style/parent">

                        <EditText
                            android:id="@+id/editTextEmail"
                            style="@style/modifiedEditText"
                            android:drawableLeft="@drawable/ic_baseline_email"
                            android:drawablePadding="10dp"
                            android:hint="@string/login_email_hint"
                            android:inputType="textEmailAddress"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_regpass"
                        style="@style/parent"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/regpass"
                            style="@style/modifiedEditText"
                            android:drawableLeft="@drawable/ic_baseline_password"
                            android:drawablePadding="10dp"
                            android:hint="@string/login_password_hint"
                            android:inputType="textPassword"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_regrepass"
                        style="@style/parent"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/regrepass"
                            style="@style/modifiedEditText"
                            android:drawableLeft="@drawable/ic_baseline_password"
                            android:drawablePadding="10dp"
                            android:hint="@string/login_repassword_hint"
                            android:inputType="textPassword"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnRegister"
                        android:layout_width="302dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:background="@drawable/btn_bg_design"
                        android:text="ĐĂNG KÝ"
                        android:textColor="@color/whiteTextColor" />

                    <TextView
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:onClick="onLoginClick"
                        android:text="Bạn đã có tài khoản? Đăng nhập ngay!"
                        android:textAlignment="center"
                        android:textColor="@color/themeColor"
                        android:textSize="17sp"
                        android:textStyle="italic|bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="3"
                    android:background="@color/whiteTextColor" />

            </LinearLayout>

            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="10dp"-->
            <!--                android:gravity="center">-->

            <!--                <ImageView-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_marginRight="30dp"-->
            <!--                    android:src="@drawable/ic_facebook" />-->

            <!--                <ImageView-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:src="@drawable/ic_google" />-->
            <!--            </LinearLayout>-->

        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_side_bg" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="false"
        android:onClick="onLoginClick"
        android:src="@drawable/ic_back_img" />
</RelativeLayout>
